syntax = "proto3";

package akka.cluster.swissborg.proto;

import "common.proto";

message LithiumAddressEnvelope {
    UniqueAddressProto addressKey = 1;
    repeated UniqueAddressProto addressValues = 2;
}

enum ReachabilityStatusProto {
    Reachable = 0;
    Unreachable = 1;
    Terminated = 2;
}

message RecordProto {
    UniqueAddressProto observer = 1;
    UniqueAddressProto subject = 2;
    ReachabilityStatusProto status = 3;
    int64 version = 4;
}

message UniqueAddressVersionEnvelope {
    UniqueAddressProto address = 1;
    int64 version = 2;
}

message AkkaReachabilityProto {
    repeated RecordProto records = 1;
    repeated UniqueAddressVersionEnvelope versions = 2;
}

message LithiumSeenChangedProto {
    bool convergence = 1;
    repeated bytes seenBy = 2;
}

message LithiumReachabilityFromAkkaProto {
    AkkaReachabilityProto reachability = 1;
}

message LithiumReachabilityFromNodesProto{
    repeated UniqueAddressProto reachableNodes = 1;
    repeated LithiumAddressEnvelope observersGroupedByUnreachableIn = 2;
}

message LithiumReachabilityChangedProto {
    oneof lithiumReachabilityProto {
        LithiumReachabilityFromAkkaProto lithiumReachabilityFromAkka = 1;
        LithiumReachabilityFromNodesProto lithiumReachabilityFromNodes = 2;
    }
}